[package]
name = "versian"
version = "0.1.0"
edition = "2021"
authors = ["Felix Päßler <fp@ekf.com>"]
description = "Parse and compare Debian package versions."
readme = "README.md"
repository = "https://github.com/ADefiniteDescription/versian"
license-file = "LICENSE"

[dependencies]
more-asserts = "0.3.1"
pretty_assertions = "1.3.0"
rust-apt = { version = "0.7.0", optional = true }

[features]
cmp = ["rust-apt"]
